<resources>
    <string name="app_name">MyGithubUser</string>
    <string name="image_description">Image</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="text_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">Detail Github User</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>

    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="repository">repository</string>

    <string name="time_setting">Time</string>
    <string name="reminder">Reminder ar 09:00 AM</string>
    <string name="alarm_on">Alarm On</string>
    <string name="alarm_off">Alarm Off</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>