<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".detail.DetailGithubUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyGithubUser.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image_description"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,1.5:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#B3FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/iv_dot"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
                    tools:text="@string/text_primary" />

                <ImageView
                    android:id="@+id/iv_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_dot"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_detail_name"
                    app:layout_constraintEnd_toEndOf="@+id/iv_detail_image"
                    app:layout_constraintStart_toStartOf="@+id/iv_detail_image"
                    app:layout_constraintTop_toTopOf="@+id/tv_detail_name" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#B3FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_dot"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
                    tools:text="@string/text_primary" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="#B3FFFFFF"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_dot"
                    tools:text="@string/text_subtitle" />

                <include android:id="@+id/card_bar_detail" layout="@layout/card_bar_detail"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MyGithubUser.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include android:id="@+id/content" layout="@layout/content_detail_github_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/menu_favorite"
        app:layout_anchor="@id/content"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_dialog_email"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>